--- a/Readme
+++ b/Readme
@@ -1,5 +1,5 @@
 Install the extension
 
-Open the Chrome browser, navigate to "chrome://extensions/", enable "Developer mode" click "Load unpacked extension button" and chose the extension folder. Then you can see that WebWisp has been installed.
+Open the Chrome browser, navigate to "chrome://extensions/", enable "Developer mode" click "Load unpacked extension" button and chose the extension folder. Then you can see that WebWisp has been installed.
 
 Enjoy!
